# streamline-python-sdk

./: CHANGELOG.md  CODEOWNERS  Makefile  NOTICE  README.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  codeql.yml  integration.yml  release.yml
docs/: TROUBLESHOOTING.md
examples/: ai_usage.py  circuit_breaker.py  query_usage.py  schema_registry.py  security.py
examples/agent_memory/: memory_demo.py
streamline_embedded/: Cargo.toml
streamline_sdk/: __init__.py  admin.py  ai.py  attestation.py  branches.py  branches_admin.py  circuit_breaker.py  client.py  consumer.py  contracts.py  exceptions.py  memory.py  metrics.py  producer.py  query.py  retry.py  schema_producer.py  search.py  serializers.py  telemetry.py  traced.py  types.py  validation.py  verifier.py
tests/: conftest.py  test_admin.py  test_admin_http_clients.py  test_ai.py  test_circuit_breaker.py  test_conformance.py  test_connection_errors.py  test_metrics.py  test_query.py  test_retry.py  test_schema_producer.py  test_search.py  test_search_memory_clients.py  test_serializers.py  test_telemetry.py  test_traced.py  test_validation.py
tests/conformance/: test_conformance.py
