[package]
name = "streamline-python-embedded"
version = "0.3.0"
edition = "2021"
description = "Python bindings for Embedded Streamline (no Docker required)"
license = "Apache-2.0"

[lib]
name = "streamline_embedded"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
serde_json = "1"

# Link against the Streamline C FFI library
# Build with: maturin develop (or maturin build --release)
